--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "node-fetch": "^3.3.2",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "serve": "^14.2.5"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.8.1",
