--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "serve": "^14.2.5"
+    "serve": "^14.2.5",
+    "turndown": "^7.2.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.8.1",
