--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
+    "start": "serve -l $PORT build",
    
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
